--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/dotenv": "^4.3",
 		"symfony/yaml": "^4.3",
 		"symfony/console": "^4.3",
-		"symfony/phpunit-bridge": "^4.3"
+		"symfony/phpunit-bridge": "^4.3",
+		"squizlabs/php_codesniffer": "^3.5"
     },
 	"require-dev": {
     	"phpunit/phpunit": "7.5.14"
