--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
 		"test cases"
 	],	
     "require": {
-		"php" : "^7.1",
-        "symfony/dotenv": "^4.3",
-		"symfony/yaml": "^4.3",
-		"symfony/console": "^4.3",
-		"symfony/phpunit-bridge": "^4.3",
-		"squizlabs/php_codesniffer": "^3.5"
+		"php" : "^7.2",
+		"ext-ds": "*",
+        "symfony/dotenv": "v4.4.7",
+		"symfony/yaml": "v4.4.7",
+		"symfony/console": "v4.4.7",
+		"symfony/phpunit-bridge": "v4.4.7",
+		"squizlabs/php_codesniffer": "3.5.4"
     },
 	"require-dev": {
     	"phpunit/phpunit": "7.5.14"
