--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"symfony/yaml": "v4.4.7",
 		"symfony/console": "v4.4.7",
 		"symfony/phpunit-bridge": "v4.4.7",
-		"squizlabs/php_codesniffer": "3.5.4"
+		"squizlabs/php_codesniffer": "3.5.4",
+      	"ext-json": "*"
     },
 	"require-dev": {
     	"phpunit/phpunit": "7.5.14"
