--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "99tests/99tests",
-	"description": "A framework to generate valuable test cases automatically*",
+	"name": "testbucket/testbucket",
+	"description": "A tool to generate test cases",
 	"type": "library",
 	"keywords": [
 		"php",
@@ -10,25 +10,26 @@
 	],	
     "require": {
 		"php" : "^7.2",
-		"ext-ds": "*",
         "symfony/dotenv": "v4.4.7",
 		"symfony/yaml": "v4.4.7",
 		"symfony/console": "v4.4.7",
 		"symfony/phpunit-bridge": "v4.4.7",
 		"squizlabs/php_codesniffer": "3.5.4",
-      	"ext-json": "*"
+		"ext-ds": "*",
+      	"ext-json": "*",
+      	"ext-sqlite3": "*"
     },
 	"require-dev": {
     	"phpunit/phpunit": "7.5.14"
   	},
 	"autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "TestBucket\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "TestBucket\\Tests\\": "tests/"
         }
     }
 }
