--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"symfony/phpunit-bridge": "v4.4.7",
 		"squizlabs/php_codesniffer": "3.5.4",
       	"ext-json": "*",
-      	"ext-sqlite3": "*"
+      	"ext-sqlite3": "*",
+		"doctrine/orm": "2.9.1"
     },
 	"require-dev": {
     	"phpunit/phpunit": "7.5.14"
@@ -33,5 +34,9 @@
     },
 	"bin": [
 		"bin/console"
-	]
+	],
+	"scripts": {
+		"test_setup": "vendor/bin/doctrine --force orm:schema-tool:drop && vendor/bin/doctrine orm:schema-tool:create --quiet",
+		"test": "vendor/bin/phpunit"
+	}
 }
