--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"squizlabs/php_codesniffer": "3.5.4",
       	"ext-json": "*",
       	"ext-sqlite3": "*",
-		"doctrine/orm": "2.9.1"
+		"doctrine/orm": "2.9.1",
+		"doctrine/cache": "1.11"
     },
 	"require-dev": {
     	"phpunit/phpunit": "7.5.14"
