--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
 		"symfony/phpunit-bridge": "v4.4.7",
 		"squizlabs/php_codesniffer": "3.5.4",
       	"ext-json": "*",
-      	"ext-sqlite3": "*",
-		"doctrine/orm": "2.9.1",
-		"doctrine/cache": "1.11"
+      	"ext-sqlite3": "*"
     },
 	"require-dev": {
-    	"phpunit/phpunit": "7.5.14"
+    	"phpunit/phpunit": "7.5.14",
+		"phpmetrics/phpmetrics": "^2.7"
   	},
 	"autoload": {
         "psr-4": {
@@ -37,7 +36,6 @@
 		"testbucket"
 	],
 	"scripts": {
-		"test_setup": "vendor/bin/doctrine --force orm:schema-tool:drop && vendor/bin/doctrine orm:schema-tool:create --quiet",
 		"test": "vendor/bin/phpunit"
 	}
 }
