--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 services:
   testbucket:
     container_name: testbucket
-    build: .
-    environment:
-      - "TESTBUCKET_DIR=/code/tmp/bucket/test.db.sqlite"
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     volumes:
       - ./:/code
     networks:
